2008-06-28  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Mention why this change is bad.

2008-06-28  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* examples/Makefile.am:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-mkhtml.in:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add searchpath to gtkdoc.mkhtml. Fixes #460753

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  To support timj aclocal setup we are shipping gnome-doc-utils.m4
	  and making sure automake picks it up ;)

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* tools/migratetmpl.pl:
	  We were still removing too many <para>s.
	  Also add andrews trick to escape the c comments.
	  Add a newline to empty param docs.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* m4/gnome-doc-utils.m4:
	  Add this to svn, so that bootstrap work where no gnome-doc-utils is
	  available yet.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* tools/migratetmpl.pl:
	  Factor out multiline formatting and use for deprecated field too.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Commenting.

	* tools/migratetmpl.pl:
	  Convert character entities back.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Start collection info about slowly deprecating crack.

	* tools/migratetmpl.pl:
	  Add title.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* tools/migratetmpl.pl:
	  Use $file in section comment not title. Convert only standalone para
	  tags.

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* tools/migratetmpl.pl:
	  Convert @Varargs: to @...:

2008-06-21  Stefan Kost  <ensonic@users.sf.net>

	* tools/migratetmpl.pl:
	  Convert single line c comments to c++ ones. Indent multiline parameter docs.

2008-06-16  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mktmpl.in:
	  Don't reuse file var, fixes warning context.
  
	* gtkdoc-scan.in:
	  Also accept *.hh as headers suffix.
